ajuste de importacions, librerias y test